tests/fixtures/valid/while.py
while True:  # Check 1
    pass

while True:  # Check 2
    pass

"""
Lorem ipsum dolor sit amet
"""
while True:  # Check 3
    pass

# Lorem ipsum dolor sit amet
while True:  # Check 4
    pass

if 1 == 1:  # Check 5
    while True:
        pass

    while True:
        pass
elif 2 == 2:
    while True:
        pass

    while True:
        pass
else:
    while True:
        pass

    while True:
        pass

while True:  # Check 6
    while True:
        pass

    while True:
        pass
else:
    while True:
        pass

    while True:
        pass

while True:  # Check 7
    while True:
        pass

    while True:
        pass
else:
    while True:
        pass

    while True:
        pass

try: # Check 8
    while True:
        pass

    while True:
        pass
except Exception:
    while True:
        pass

    while True:
        pass
finally:
    while True:
        pass

    while True:
        pass
